timer text alignment fix

--- a/src/components/LiverTimer/Mytimer.module.scss
+++ b/src/components/LiverTimer/Mytimer.module.scss
@@ -2,6 +2,7 @@
 @import '../../../styles/abstracts/mixins.module';
 
 .timerContainer {
+  text-align: right;
   h4,
   p {
     @include font-md-avenir-medium;
